--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,35 @@
   <body>
     @@include('blocks/header.html')
     <main class="content">
-      
+      <section class="banner">
+        <div class="banner__about">
+          <div class="banner__about-line"></div>
+          <h1 class="banner__about-title">Discover And Create NFTs</h1>
+          <p class="banner__about-text">Discover, Create and Sell NFTs On Our NFT Marketplace With Over Thousands Of NFTs And Get a <span class="banner__about-text--span">$20 bonus.</span></p>
+          <ul class="banner__about-list">
+            <li class="banner__about-list--item"><a class="banner__about-list--item-link" href="">Explore More</a></li>
+            <li class="banner__about-list--item"><a class="banner__about-list--item-link" href="">create NFT</a></li>
+          </ul>
+          <ul class="banner__about-list--our">
+            <li class="banner__about-list--our-item">
+              <span class="banner__about-list--our-item-amount">430K+</span>
+              <span class="banner__about-list--our-item-creatures">430K+</span>
+              
+            </li>
+            <li class="banner__about-list--our-item">
+              <span class="banner__about-list--our-item-amount">159K+</span>
+
+            </li>
+            <li class="banner__about-list--our-item">
+              <span class="banner__about-list--our-item-amount">87K+</span>
+
+            </li>
+          </ul>
+        </div>
+        <div class="banner__slide">
+
+        </div>
+      </section>
     </main>
     @@include('blocks/footer.html')
     <script src="js/app.js" defer></script>
