--- a/source/index.html
+++ b/source/index.html
@@ -36,16 +36,15 @@
           <ul class="banner__about-list--our">
             <li class="banner__about-list--our-item">
               <span class="banner__about-list--our-item-amount">430K+</span>
-              <span class="banner__about-list--our-item-creatures">430K+</span>
-              
+              <span class="banner__about-list--our-item-creatures">Art Works</span>
             </li>
             <li class="banner__about-list--our-item">
               <span class="banner__about-list--our-item-amount">159K+</span>
-
+              <span class="banner__about-list--our-item-creatures">Creators</span>
             </li>
             <li class="banner__about-list--our-item">
               <span class="banner__about-list--our-item-amount">87K+</span>
-
+              <span class="banner__about-list--our-item-creatures">Collections</span>
             </li>
           </ul>
         </div>
