--- a/source/index.html
+++ b/source/index.html
@@ -30,8 +30,8 @@
           <h1 class="banner__about-title">Discover And Create NFTs</h1>
           <p class="banner__about-text">Discover, Create and Sell NFTs On Our NFT Marketplace With Over Thousands Of NFTs And Get a <span class="banner__about-text--span">$20 bonus.</span></p>
           <ul class="banner__about-list">
-            <li class="banner__about-list--item"><a class="banner__about-list--item-link" href="">Explore More</a></li>
-            <li class="banner__about-list--item"><a class="banner__about-list--item-link" href="">create NFT</a></li>
+            <li class="banner__about-list--item"><a class="banner__about-list--item-link_explore" href="">Explore More</a></li>
+            <li class="banner__about-list--item"><a class="banner__about-list--item-link_create" href="">create NFT</a></li>
           </ul>
           <ul class="banner__about-list--our">
             <li class="banner__about-list--our-item">
@@ -55,5 +55,6 @@
     </main>
     @@include('blocks/footer.html')
     <script src="js/app.js" defer></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
