--- a/source/index.html
+++ b/source/index.html
@@ -48,8 +48,55 @@
             </li>
           </ul>
         </div>
-        <div class="banner__slide">
-          
+        <div class="banner__slider-group">
+          <div class="banner__slider-container">
+            <div class="banner__slider">
+              <div class="banner__slider-wrapper">
+                <div class="banner__slider-inner--wrapper">
+                  <div class="banner__slide"></div>
+                  <div class="banner__slide"></div>
+                  <div class="banner__slide"></div>
+                  <div class="banner__slide"></div>
+                  <div class="banner__slide"></div>
+                </div>
+              </div>
+              <div class="banner__slider-bottom--panel">
+                <button class="slider__button slider__button-back_js slider__button-right--back_js">
+                  <svg width="16.569336" height="10.651367" viewBox="0 0 16.5693 10.6514" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <path id="vector (Stroke)" d="M5.81 0.31C5.33 -0.13 4.58 -0.1 4.13 0.38L0.31 4.52C-0.11 4.97 -0.11 5.67 0.31 6.12L4.13 10.27C4.58 10.75 5.33 10.78 5.81 10.33C6.29 9.89 6.32 9.14 5.87 8.66L3.88 6.5L15.38 6.5C16.03 6.5 16.56 5.97 16.56 5.32C16.56 4.67 16.03 4.14 15.38 4.14L3.88 4.14L5.87 1.98C6.32 1.5 6.29 0.75 5.81 0.31Z" fill="#23262F" fill-opacity="1.000000" fill-rule="evenodd"/>
+                  </svg>
+                </button>
+                <span class="banner__slider-bottom--panel-vector">
+                  <svg width="2.367188" height="28.403564" viewBox="0 0 2.36719 28.4036" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <rect id="Frame 14" rx="0.591743" width="1.183486" height="27.220182" transform="translate(0.591743 0.591743)" fill="#E6E8EC" fill-opacity="1.000000"/>
+                  </svg>
+                </span>
+                <button class="slider__button slider__button-next_js slider__button-right--next_js">
+                  <svg width="16.569336" height="10.651367" viewBox="0 0 16.5693 10.6514" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <path id="vector (Stroke)" d="M10.75 0.31C11.23 -0.13 11.98 -0.1 12.43 0.38L16.25 4.52C16.67 4.97 16.67 5.67 16.25 6.12L12.43 10.27C11.98 10.75 11.23 10.78 10.75 10.33C10.27 9.89 10.24 9.14 10.69 8.66L12.68 6.5L1.18 6.5C0.53 6.5 0 5.97 0 5.32C0 4.67 0.53 4.14 1.18 4.14L12.68 4.14L10.69 1.98C10.24 1.5 10.27 0.75 10.75 0.31Z" fill="#23262F" fill-opacity="1.000000" fill-rule="evenodd"/>
+                  </svg>
+                </button>
+              </div>
+            </div>
+        </div>
+
+        <div class="banner__slider-right--container">
+          <div class="banner__slider-right-arrow-dots">
+            <img class="banner__slider-right--img" src="../img/banner_vector.png" alt="arrow">
+            <div class="banner__slider-right--dots"></div>
+          </div>
+          <div class="banner__slider-right">
+            <div class="banner__slider-right--wrapper">
+              <div class="banner__slider-right--inner-wrapper">
+                <div class="banner__slide-right"></div>
+                <div class="banner__slide-right"></div>
+                <div class="banner__slide-right"></div>
+                <div class="banner__slide-right"></div>
+                <div class="banner__slide-right"></div>
+              </div>
+            </div>
+          </div>
+        </div>
         </div>
       </section>
     </main>
