--- a/source/index.html
+++ b/source/index.html
@@ -99,9 +99,55 @@
         </div>
         </div>
       </section>
+      <section class="question">
+        <span class="question__title">Frequently Asked Questions</span>
+        <div class="question__div">
+          <div class="question__div-wrapper">
+            <span class="question__div-wrapper--question">What is an NFT?</span>
+            <button type="button" class="question__div-wrapper--button question_btn_js">+</button>
+          </div>
+          <span class="question__div-answer question__div-answer_js">A unique digital asset on a blockchain, representing ownership of items like art or collectibles.</span>
+          <div class="question__div-line"></div>
+        </div>
+        <div class="question__div">
+          <div class="question__div-wrapper">
+            <span class="question__div-wrapper--question">What can I use NFTs for?</span>
+            <button type="button" class="question__div-wrapper--button question_btn_js">+</button>
+          </div>
+          <span class="question__div-answer question__div-answer_js">Digital art, gaming, music, virtual real estate, and royalties.</span>
+          <div class="question__div-line"></div>
+        </div>
+        <div class="question__div">
+          <div class="question__div-wrapper">
+            <span class="question__div-wrapper--question">What is the difference between an NFT and cryptocurrency?</span>
+            <button type="button" class="question__div-wrapper--button question_btn_js">+</button>
+          </div>
+          <span class="question__div-answer question__div-answer_js">NFTs are unique (non-fungible); cryptocurrencies are interchangeable (fungible).</span>
+          <div class="question__div-line"></div>
+        </div>
+        <div class="question__div">
+          <div class="question__div-wrapper">
+            <span class="question__div-wrapper--question">How much is an NFT worth?</span>
+            <button type="button" class="question__div-wrapper--button question_btn_js">+</button>
+          </div>
+          <span class="question__div-answer question__div-answer_js">Depends on rarity, creator, and demand—can range from a few dollars to millions.</span>
+          <div class="question__div-line"></div>
+        </div>
+        <div class="question__div">
+          <div class="question__div-wrapper">
+            <span class="question__div-wrapper--question">How do I purchase an NFT on your platform ?</span>
+            <button type="button" class="question__div-wrapper--button question_btn_js">+</button>
+          </div>
+          <span class="question__div-answer question__div-answer_js">Set up a wallet, fund it with crypto, connect to the platform, browse, and buy with a confirmed transaction. Check your platform’s guide for specifics.</span>
+          <div class="question__div-line"></div>
+        </div>
+
+      </section>
     </main>
     @@include('blocks/footer.html')
     <script src="js/app.js" defer></script>
     <script src="js/index.js"></script>
+    <script src="js/script.js"></script>
+
   </body>
 </html>
