--- a/source/conectWallet.html
+++ b/source/conectWallet.html
@@ -30,7 +30,7 @@
           </a>
           <h1 class="wallet__connect-title">Choose Wallet</h1>
           <ul class="wallet__connect-list">
-            <li class="wallet__connect-list--item">
+            <li class="wallet__connect-list--item wallet__connect-animation--first">
               <a href="" class="wallet__connect-list--item-link">
                 <img class="wallet__connect-list--item-link_img" src="../img/metamask_img.png" alt="">
                 <span class="wallet__connect-list--item-link_span1">Metamask</span>
@@ -39,7 +39,7 @@
                 </svg>
               </a>
             </li>
-            <li class="wallet__connect-list--item">
+            <li class="wallet__connect-list--item wallet__connect-animation--second">
               <a href="" class="wallet__connect-list--item-link">
                 <img class="wallet__connect-list--item-link_img" src="../img/trust_img.png" alt="">
                 <span class="wallet__connect-list--item-link_span1">Trust Wallet</span>
@@ -48,7 +48,7 @@
                 </svg>
               </a>
             </li>
-            <li class="wallet__connect-list--item">
+            <li class="wallet__connect-list--item wallet__connect-animation--third">
               <a href="" class="wallet__connect-list--item-link">
                 <img class="wallet__connect-list--item-link_img" src="./img/link_img.png" alt="">
                 <span class="wallet__connect-list--item-link_span1">Enter ethereum address</span>
