--- a/source/index.html
+++ b/source/index.html
@@ -99,6 +99,44 @@
         </div>
         </div>
       </section>
+      <section class="community">
+        <div class="community__orbit-outer">
+          <div class="community__orbit-outer--wrapper planet--1">
+            <img class="community__orbit-outer--wrapper-img" src="../img/planet_img1.png" alt="planet">
+          </div>
+          <div class="community__orbit-outer--wrapper planet--2">
+            <img class="community__orbit-outer--wrapper-img" src="../img/planet_img2.png" alt="planet">
+          </div>
+          <div class="community__orbit-outer--wrapper planet--3">
+            <img class="community__orbit-outer--wrapper-img" src="../img/planet_img3.png" alt="planet">
+          </div>
+          <div class="community__orbit-outer--wrapper planet--4">
+            <img class="community__orbit-outer--wrapper-img" src="../img/planet_img4.png" alt="planet">
+          </div>
+          <div class="community__orbit-outer--wrapper planet--5">
+            <img class="community__orbit-outer--wrapper-img" src="../img/planet_img5.png" alt="planet">
+          </div>
+        </div>
+        <div class="community__orbit-inner">
+          <div class="community__orbit-inner--wrapper planet--6">
+            <img class="community__orbit-inner--wrapper-img" src="../img/planet_img6.png" alt="planet">
+          </div>
+          <div class="community__orbit-inner--wrapper planet--7">
+            <img class="community__orbit-inner--wrapper-img" src="../img/planet_img7.png" alt="planet">
+          </div>
+          <div class="community__orbit-inner--wrapper planet--8">
+            <img class="community__orbit-inner--wrapper-img" src="../img/planet_img8.png" alt="planet">
+          </div>
+          <div class="community__orbit-inner--wrapper planet--9">
+            <img class="community__orbit-inner--wrapper-img" src="../img/planet_img9.png" alt="planet">
+          </div>
+        </div>
+        <div class="community__content">
+          <h6 class="community__orbit-inner--title">Join The Community</h6>
+          <p class="community__orbit-inner--text">Our vibrant community is full of collectors, artists, and enthusiasts who share a passion for one-of-a-kind digital.</p>
+          <button type="button" class="community__orbit-inner--button">Join Our Community</button>
+        </div>
+      </section>
       <section class="question">
         <span class="question__title">Frequently Asked Questions</span>
         <div class="question__div">
@@ -141,13 +179,11 @@
           <span class="question__div-answer question__div-answer_js">Set up a wallet, fund it with crypto, connect to the platform, browse, and buy with a confirmed transaction. Check your platform’s guide for specifics.</span>
           <div class="question__div-line"></div>
         </div>
-
       </section>
+
     </main>
     @@include('blocks/footer.html')
     <script src="js/app.js" defer></script>
     <script src="js/index.js"></script>
-    <script src="js/script.js"></script>
-
   </body>
 </html>
