--- a/source/index.html
+++ b/source/index.html
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="community__content">
-          <h6 class="community__orbit-inner--title">Join The Community</h6>
+          <h5 class="community__orbit-inner--title">Join The Community</h5>
           <p class="community__orbit-inner--text">Our vibrant community is full of collectors, artists, and enthusiasts who share a passion for one-of-a-kind digital.</p>
           <button type="button" class="community__orbit-inner--button">Join Our Community</button>
         </div>
@@ -180,7 +180,15 @@
           <div class="question__div-line"></div>
         </div>
       </section>
-
+      <section class="create container">
+        <h6 class="create__title">Create and Sell NFTs</h6>
+        <span class="create__text">World’s Largest NFT Place</span>
+        <ul class="create__list">
+          <li class="create__list-item"><a href="" class="create__list-item--link">Explore More</a></li>
+          <li class="create__list-item"><a href="" class="create__list-item--link">Sell Artwork</a></li>
+        </ul>
+        <img src="../img/create_img.png" alt="create" class="create__img">
+      </section>
     </main>
     @@include('blocks/footer.html')
     <script src="js/app.js" defer></script>
