--- a/source/index.html
+++ b/source/index.html
@@ -181,12 +181,14 @@
         </div>
       </section>
       <section class="create container">
-        <h6 class="create__title">Create and Sell NFTs</h6>
-        <span class="create__text">World’s Largest NFT Place</span>
-        <ul class="create__list">
-          <li class="create__list-item"><a href="" class="create__list-item--link">Explore More</a></li>
-          <li class="create__list-item"><a href="" class="create__list-item--link">Sell Artwork</a></li>
-        </ul>
+        <div class="create__wrapper">
+          <h6 class="create__title">Create and Sell NFTs</h6>
+          <span class="create__text">World’s Largest NFT Place</span>
+          <ul class="create__list">
+            <li class="create__list-item--first"><a href="" class="create__list-item--first-link">Explore More</a></li>
+            <li class="create__list-item--second"><a href="" class="create__list-item--second-link">Sell Artwork</a></li>
+          </ul>
+        </div>
         <img src="../img/create_img.png" alt="create" class="create__img">
       </section>
     </main>
